# era5-to-ccpp-scm-tool

./: README.md  install.sh  pyproject.toml
casegen_walnut_gulch/: README.md  convert_forcing.sh  download_era5.sh  fluxnet_US-Whs.ini  fluxnet_US-Whs.nml  notes.md  setup_case.sh
casegen_walnut_gulch/data/: README.md  fluxnet_US-Whs.nc  walnut_gulch_pl.nc  walnut_gulch_rad.nc  walnut_gulch_scm_forcings.nc  walnut_gulch_sfc.nc
era5_to_ccpp_scm/: ERA5_variable.SCM.input.xlsx  ameriflux.sites.north_hem.nl5yr.location.csv  cli.py  convert_forcing.py  download_era5.py  step1_download_era5.derecho.py  step2_preprocess_data.derecho.ipynb  step3_calc_scm_tendency_terms.derecho.ipynb  step4_convert_to_scm_input.derecho.ipynb  util.py
era5_to_ccpp_scm/templates/: __init__.py  gabls3_noahmp.nc
examples/: example_calculate_forcings.sh  example_download_era5.sh  example_full_pipeline.sh  example_merge_inputs.sh
