[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "era5-to-ccpp-scm-tool"
version = "0.0.0"
description = "A small command line tool for generating CCPP SCM inputs from ERA5 data"
authors = [
    { name = "Andrew Bennett", email = "andrbenn@arizona.edu" },
]
dependencies = [
    "click>=8.0.0",
    "xarray",
    "cdsapi",
    "metpy",
    "numpy"
]
requires-python = ">=3.8"
readme = "README.md"

[project.scripts]
era5-scm-tool = "era5_to_ccpp_scm.cli:cli"  # This makes your script executable

[tool.hatch.build.targets.wheel]
packages = ["era5_to_ccpp_scm"]