[project]
name = "scm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dask>=2025.3.0",
    "f90nml>=1.4.5",
    "h5netcdf>=1.6.1",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "netcdf4>=1.7.2",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "xarray>=2025.3.1",
    "zarr>=3.0.6",
]
